--- a/package.json
+++ b/package.json
@@ -11,8 +11,16 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^4.3.30",
+    "aws-sdk": "^2.1218.0",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.1",
+    "leaflet": "^1.8.0",
+    "leaflet-draw": "^1.0.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.0.1",
+    "react-leaflet-draw": "^0.20.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
