--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 API_GW_URL=https://01djeb5cph.execute-api.eu-west-1.amazonaws.com/dev
-ACCESS_KEY_ID=AKIAY2GJERSTTJ7S2PWJ
-SECRETACCESSKEY=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
+ACCESS_KEY_ID=
+SECRETACCESSKEY=
 S3_BUCKET_IMG=geoatles-serverless-images
