--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.0.1",
     "react-leaflet-draw": "^0.20.4",
+    "react-s3": "^1.3.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
