--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^3.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-ui/core": "^4.12.4",
@@ -18,13 +19,17 @@
     "bootstrap": "^5.2.1",
     "leaflet": "^1.8.0",
     "leaflet-draw": "^1.0.4",
+    "leaflet.wms": "^0.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-leaflet": "^4.0.1",
     "react-leaflet-draw": "^0.20.4",
+    "react-responsive-navbar": "^1.0.11",
     "react-s3": "^1.3.1",
     "react-scripts": "5.0.1",
+    "styled-icons": "^10.46.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
