--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "aws-sdk": "^2.1218.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
+    "jquery": "^3.6.1",
     "leaflet": "^1.8.0",
     "leaflet-draw": "^1.0.4",
     "leaflet.wms": "^0.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
+    "react-ga4": "^1.4.1",
     "react-icons": "^4.6.0",
     "react-leaflet": "^4.0.1",
     "react-leaflet-draw": "^0.20.4",
